--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-useful-hooks",
+  "name": "my-react-ts-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AnonymousCoder2020/my-useful-hooks.git"
+    "url": "git+https://github.com/AnonymousCoder2020/my-react-ts-boilerplate.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AnonymousCoder2020/my-useful-hooks/issues"
+    "url": "https://github.com/AnonymousCoder2020/my-react-ts-boilerplate/issues"
   },
-  "homepage": "https://github.com/AnonymousCoder2020/my-useful-hooks#readme",
+  "homepage": "https://github.com/AnonymousCoder2020/my-react-ts-boilerplate#readme",
   "dependencies": {
     "@use-it/event-listener": "^0.1.3",
     "chrome-extension-async": "^3.4.1",
