--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && git add .",
+    "set-url": "git remote set-url origin",
+    "check-url": "git remote -v",
     "publish": "git push origin master",
     "pull": "git pull origin master"
   },
@@ -36,7 +38,6 @@
     "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
-    "@types/lodash.isplainobject": "^4.0.6",
     "@babel/core": "^7.10.2",
     "@types/babel__core": "^7.1.8",
     "@types/chrome": "0.0.91",
@@ -44,6 +45,7 @@
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.155",
     "@types/lodash-es": "^4.17.3",
+    "@types/lodash.isplainobject": "^4.0.6",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -65,6 +67,7 @@
     "ts-essentials": "^5.0.0",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.2",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "webextension-polyfill": "^0.6.0",
     "webpack": "^4.43.0",
