--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@types/babel__core": "^7.1.8",
     "@types/chrome": "0.0.91",
     "@types/html-webpack-plugin": "^3.2.3",
@@ -75,29 +76,5 @@
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "jsx",
-      "tsx"
-    ],
-    "moduleNameMapper": {
-      "^~/(.+)": "<rootDir>/src/$1",
-      "^~lib/(.+)": "<rootDir>/src/lib/$1"
-    },
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest",
-      "^.+\\.svg$": "jest-svg-transformer"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tsconfig.json"
-      }
-    },
-    "testMatch": [
-      "**/tests/**/*.test.ts"
-    ]
   }
 }
