--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && git add .",
@@ -23,21 +24,7 @@
     "url": "https://github.com/AnonymousCoder2020/my-react-ts-boilerplate/issues"
   },
   "homepage": "https://github.com/AnonymousCoder2020/my-react-ts-boilerplate#readme",
-  "dependencies": {
-    "@use-it/event-listener": "^0.1.3",
-    "chrome-extension-async": "^3.4.1",
-    "dayjs": "^1.8.28",
-    "lodash": "^4.17.15",
-    "objectpath": "^2.0.0",
-    "polished": "^3.6.5",
-    "randexp": "^0.5.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^4.4.1",
-    "use-async-effect": "^2.2.2",
-    "use-async-memo": "^1.2.2",
-    "use-persisted-state": "^0.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
