--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup": "node --loader ts-node/esm.mjs scripts/setup.ts",
+    "setup": "node scripts setup",
     "build": "tsc && git add .",
     "set-url": "git remote set-url origin",
     "check-url": "git remote -v",
@@ -36,8 +36,6 @@
     "@types/lodash.isplainobject": "^4.0.6",
     "@types/store": "^2.0.2",
     "@types/webpack": "^4.41.17",
-    "@types/webpack-bundle-analyzer": "^2.13.3",
-    "@types/webpack-dev-server": "^3.11.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "css-loader": "^3.6.0",
@@ -48,11 +46,6 @@
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7",
-    "webextension-polyfill": "^0.6.0",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^3.9.7"
   }
 }
