--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-ts-boilerplate",
+  "name": "my-ts-utilities-boilerplate",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
@@ -16,15 +16,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AnonymousCoder2020/my-react-ts-boilerplate.git"
+    "url": "git+https://github.com/AnonymousCoder2020/my-ts-utilities-boilerplate.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AnonymousCoder2020/my-react-ts-boilerplate/issues"
+    "url": "https://github.com/AnonymousCoder2020/my-ts-utilities-boilerplate/issues"
   },
-  "homepage": "https://github.com/AnonymousCoder2020/my-react-ts-boilerplate#readme",
+  "homepage": "https://github.com/AnonymousCoder2020/my-ts-utilities-boilerplate#readme",
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.11.5",
